virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtualservice
  namespace: statistics
spec:
  hosts:
  - "stats.mytestdomain.com"
  gateways:
  - dev-env/test-gateway
  http:
  - route:
    - destination:
        port:
          number: 3000
        host: grafana
